Agrego Scss y Seo

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Pagina de Reparacion de aires acondicionados, lavarropas, heladeras y mas"
+    />
+    <meta
+      name="keyword"
+      content="Reparaciones Aires Acondicionados Lavarropas Heladeras Microondas Tostadoras Reparacion Paraná Lamparas Licuadoras Tecnica "
+    />
     <!--css-->
     <link rel="stylesheet" href="../css/style.css" />
     <!--font-->
@@ -83,12 +91,14 @@
         <div class="container text-center">
           <div class="row">
             <div class="col">
-              <h1 class="display-3">Contactenos</h1>
+              <h1 class="display-3">
+                <span class="span-contacto">Contactenos</span>
+              </h1>
             </div>
           </div>
         </div>
       </article>
-      <article>
+      <article class="article-contacto">
         <div class="container text-center">
           <div class="row">
             <div class="col">
