--- a/pages/presupuesto.html
+++ b/pages/presupuesto.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Pagina de Reparacion de aires acondicionados, lavarropas, heladeras y mas"
+    />
+    <meta
+      name="keyword"
+      content="Reparaciones Aires Acondicionados Lavarropas Heladeras Microondas Tostadoras Reparacion Paraná Lamparas Licuadoras Tecnica "
+    />
     <!--css-->
     <link rel="stylesheet" href="../css/style.css" />
     <!--font-->
@@ -88,7 +96,7 @@
           </div>
         </div>
       </article>
-      <article>
+      <article class="arcticle-presupuesto__tabla">
         <div class="container text-center">
           <div class="row">
             <div class="col">
@@ -102,7 +110,7 @@
           </div>
         </div>
       </article>
-      <article>
+      <article class="arcticle-presupuesto">
         <table class="table table-primary table-striped">
           <thead>
             <tr>
