--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -115,8 +115,8 @@
             <div class="col">
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1426.0455756628348!2d-60.51801649035937!3d-31.77792863495751!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b44c4c7475386d%3A0x8943a4b824022357!2sFlorencio%20Escardo%2C%20Paran%C3%A1%2C%20Entre%20R%C3%ADos!5e0!3m2!1ses!2sar!4v1666239503841!5m2!1ses!2sar"
-                width="600"
-                height="450"
+                width="100%"
+                height="100%"
                 style="border: 0"
                 allowfullscreen=""
                 loading="lazy"
