cambio de letra y navbar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <!--font-->
     <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&family=Fira+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <!--iconitos-->
@@ -56,7 +56,7 @@
             alt="Logo"
             width="55"
             height="40"
-            class="d-inline-block align-text-top"
+            class="d-inline-block align-text-top navbarlogo"
           />
           <a class="navbar-brand" href="index.html">Gr.Reparaciones</a>
           <button
@@ -70,7 +70,7 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="collapse navbar-collapse navbarpages" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link active" href="pages/ubicacion.html"
