--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -56,7 +56,7 @@
             alt="Logo"
             width="55"
             height="40"
-            class="d-inline-block align-text-top"
+            class="d-inline-block align-text-top navbarlogo"
           />
           <a class="navbar-brand" href="../index.html">Gr.Reparaciones</a>
           <button
