--- a/pages/problemas.html
+++ b/pages/problemas.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../css/style.css" />
     <!--font-->
     <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&family=Fira+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <!--iconitos-->
