--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
       </nav>
     </header>
-    <section class="p-3 mb-2 bg-info text-dark">
+    <section class="p-3 mb-2 text-dark sectionbody">
       <article>
         <div class="container text-center">
           <div class="row">
@@ -119,7 +119,7 @@
           </div>
         </div>
       </article>
-      <article class="article-index">
+      <article class="article-index p-3">
         <div
           id="carouselExampleInterval"
           class="carousel slide"
@@ -169,7 +169,7 @@
         </div>
       </article>
     </section>
-    <footer>
+    <footer class="footer">
       <div class="container text-center text-white">
         <div class="row">
           <div class="col-md-3">
@@ -182,6 +182,7 @@
           </div>
           <div class="col-md-3">
             Buscanos en las redes<a
+              class="iconosfooter"
               style="color: white"
               href="https://m.facebook.com/profile.php?id=1787163212"
               ><i class="fa-brands fa-facebook"></i
