--- a/pages/presupuesto.html
+++ b/pages/presupuesto.html
@@ -56,7 +56,7 @@
             alt="Logo"
             width="55"
             height="40"
-            class="d-inline-block align-text-top"
+            class="d-inline-block align-text-top navbarlogo"
           />
           <a class="navbar-brand" href="../index.html">Gr.Reparaciones</a>
           <button
@@ -70,7 +70,7 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="collapse navbar-collapse navbarpages" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link active" href="ubicacion.html">Ubicacion</a>
@@ -86,7 +86,7 @@
         </div>
       </nav>
     </header>
-    <section class="p-3 mb-2 bg-info text-dark">
+    <section class="p-3 mb-2 sectionbody text-dark">
       <article>
         <div class="container text-center">
           <div class="row">
