--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -70,7 +70,7 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="collapse navbar-collapse navbarpages" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link active" href="ubicacion.html">Ubicacion</a>
@@ -86,7 +86,7 @@
         </div>
       </nav>
     </header>
-    <section class="p-3 mb-2 bg-info text-dark">
+    <section class="p-3 mb-2 sectionbody text-dark">
       <article>
         <div class="container text-center">
           <div class="row">
@@ -116,7 +116,7 @@
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1426.0455756628348!2d-60.51801649035937!3d-31.77792863495751!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b44c4c7475386d%3A0x8943a4b824022357!2sFlorencio%20Escardo%2C%20Paran%C3%A1%2C%20Entre%20R%C3%ADos!5e0!3m2!1ses!2sar!4v1666239503841!5m2!1ses!2sar"
                 width="100%"
-                height="100%"
+                height="450px"
                 style="border: 0"
                 allowfullscreen=""
                 loading="lazy"
@@ -127,7 +127,7 @@
         </div>
       </article>
     </section>
-    <footer>
+    <footer class="footer">
       <div class="container text-center text-white">
         <div class="row">
           <div class="col-md-3">
