--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -86,13 +86,13 @@
         </div>
       </nav>
     </header>
-    <section class="p-3 mb-2 sectionbodyform text-dark">
+    <section class="p-3 mb-2 sectionbody text-dark">
       <article>
         <div class="container text-center">
           <div class="row">
             <div class="col">
               <h1 class="display-3">
-                <span class="span-contacto">Contactenos</span>
+                <span class="span-contacto">Contáctenos</span>
               </h1>
             </div>
           </div>
@@ -102,10 +102,10 @@
         <div class="container text-center">
           <div class="row">
             <div class="col">
-              <form>
+              <form class="form-info">
                 <fieldset>
                   <p class="text-white display-6">
-                    Rellene este formulario para poder contactarnos con usted
+                    Complete este formulario para poder contactarnos
                   </p>
                   <label for="nombre">Nombre</label>
                   <input type="text" name="nombre" id="nombre" />
@@ -113,7 +113,7 @@
                   <label for="apellido">Apellido</label>
                   <input type="text" name="apellido" id="apellido" />
                   <br />
-                  <label for="gmail">Correo Electronico</label>
+                  <label for="gmail">Correo Electrónico</label>
                   <input type="text" name="gmail" id="gmail" />
                   <br />
                   <label for="numero telefonico">Numero de Telefono</label>
@@ -132,7 +132,7 @@
                   </select>
                   <br />
                   <div>Cuentenos cual es el problema</div>
-                  <textarea name="Problema" id="Problemas" cols="30" rows="10">
+                  <textarea name="Problema" id="Problemas" cols="25" rows="5">
                   </textarea>
                   <div>
                     Acepta que le enviemos correos y mensajes para comunicarnos
@@ -140,8 +140,8 @@
                   </div>
                   <input type="checkbox" name="acepto" id="acepto" value="1" />
                   <br />
-                  <input type="submit" value="Enviar" />
-                  <input type="reset" value="Borrar" />
+                  <input class="input-button" type="submit" value="Enviar" />
+                  <input class="input-button" type="reset" value="Borrar" />
                 </fieldset>
               </form>
             </div>
@@ -157,7 +157,7 @@
           </div>
           <div class="col-md-6 button_contacto">
             <a class="button_a" href="contacto.html">
-              <button class="text-white btn">Contactenos</button>
+              <button class="text-white btn">Contáctenos</button>
             </a>
           </div>
           <div class="col-md-3">
