arreglo errores ortograficos

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <div class="row">
             <div class="col">
               <h1 class="display-3">
-                Reparacion de Lavarropas, Heladeras, Aires Acondicionados, entre
+                Reparación de Lavarropas, Heladeras, Aires Acondicionados, entre
                 otros
               </h1>
             </div>
@@ -111,9 +111,9 @@
             <div class="col">
               <p class="lead">
                 ¿Problemas con la heladera?, ¿El lavarropas no arranca o hace
-                ruidos raros?, ¿Necesitas colocar un aire accondicionado?,
-                ¿Algunas visita Tecnica? No hay problema, estas en la pagina
-                correcta, en GR.Reparaciones realizamos todo esto y mucho mass!!
+                ruidos raros?, ¿Necesitas colocar un aire acondicionado?,
+                ¿Algunas visita Técnica? No hay problema, estás en la página
+                correcta, en GR.Reparaciones realizamos todo esto y mucho mas!!
               </p>
             </div>
           </div>
@@ -177,7 +177,7 @@
           </div>
           <div class="col-md-6">
             <a href="pages/contacto.html">
-              <button class="text-white btn">Contactenos</button>
+              <button class="text-white btn">Contáctenos</button>
             </a>
           </div>
           <div class="col-md-3">
