--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -116,11 +116,11 @@
                   <label for="gmail">Correo Electrónico</label>
                   <input type="text" name="gmail" id="gmail" />
                   <br />
-                  <label for="numero telefonico">Numero de Telefono</label>
+                  <label for="numero telefonico">Número de Telefono</label>
                   <input type="text" name="telefono" id="telefono" />
                   <br />
                   <label for="Electrodomesticos"
-                    >Que electrodomestico presenta la falla?</label
+                    >Que electrodoméstico presenta la falla?</label
                   >
                   <select name="Electrodomesticos" id="Electrodomesticos">
                     <option value="Lavarropas">Lavarropas</option>
@@ -162,6 +162,7 @@
           </div>
           <div class="col-md-3">
             Buscanos en las redes<a
+              class="iconosfooter"
               style="color: white"
               href="https://m.facebook.com/profile.php?id=1787163212"
               ><i class="fa-brands fa-facebook"></i
