--- a/pages/presupuesto.html
+++ b/pages/presupuesto.html
@@ -101,10 +101,10 @@
           <div class="row">
             <div class="col">
               <p class="lead">
-                Estos son los precion aproximados de los problemas mas
+                Estos son los precios aproximados de los problemas más
                 habituales, el precio puede variar por la distancia a recorrer o
-                algun otra adversidad en la reparacion del ectrodomestico. Todos
-                estos precios son del mes de octubre del 2022
+                algún otra adversidad en la reparación del electrodoméstico.
+                Todos éstos precios son del mes de octubre del 2022
               </p>
             </div>
           </div>
@@ -132,12 +132,12 @@
             </tr>
             <tr>
               <th scope="row">3</th>
-              <td>Reparacion de fugas en Heladera</td>
+              <td>Reparación de fugas en Heladera</td>
               <td>$15.000 Simples,$25.000 Compuestas</td>
             </tr>
             <tr>
               <th scope="row">4</th>
-              <td>Instalacion Aire Acondicionado</td>
+              <td>Instalación Aire Acondicionado</td>
               <td>Desde $18.000 hasta $87.000</td>
             </tr>
             <tr>
@@ -152,7 +152,7 @@
             </tr>
             <tr>
               <th scope="row">7</th>
-              <td>Visita Tecnica</td>
+              <td>Visita Técnica</td>
               <td>$2.000</td>
             </tr>
           </tbody>
@@ -172,6 +172,7 @@
           </div>
           <div class="col-md-3">
             Buscanos en las redes<a
+              class="iconosfooter"
               style="color: white"
               href="https://m.facebook.com/profile.php?id=1787163212"
               ><i class="fa-brands fa-facebook"></i
