--- a/pages/problemas.html
+++ b/pages/problemas.html
@@ -96,20 +96,20 @@
           </div>
         </div>
       </article>
-      <article>
+      <article class="lista-problemas">
         <h4 class="display-8">Lavarropas</h4>
         <ul class="list-group list-group-flush">
           <li class="list-group-item list-group-item-primary">
             Cambio Rodamientos
           </li>
           <li class="list-group-item list-group-item-primary">
-            Cambio Plaqueta Electronica
+            Cambio Plaqueta Electrónica
           </li>
           <li class="list-group-item list-group-item-primary">
             Cambio Bomba Desagote
           </li>
           <li class="list-group-item list-group-item-primary">
-            Cambio Electro Valvula
+            Cambio Electro Valvulá
           </li>
           <li class="list-group-item list-group-item-primary">
             Cambio Blocapuerta
@@ -131,7 +131,7 @@
             Cambio Compresor
           </li>
           <li class="list-group-item list-group-item-secondary">
-            Cambio Plaqueta Electronica
+            Cambio Plaqueta Electronicá
           </li>
           <li class="list-group-item list-group-item-secondary">
             Cambio Filtro
@@ -146,7 +146,7 @@
             Cambio Sensores
           </li>
           <li class="list-group-item list-group-item-secondary">
-            Cambio Rele y Protector Termico
+            Cambio Rele y Protector Térmico
           </li>
           <li class="list-group-item list-group-item-secondary">
             Cambio Resistencia No Frost
@@ -164,7 +164,7 @@
         </ul>
         <h4 class="display-8">Aires Acondicionados</h4>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item list-group-item-warning">Instalacion</li>
+          <li class="list-group-item list-group-item-warning">Instalación</li>
           <li class="list-group-item list-group-item-warning">
             Cambio Compresor
           </li>
@@ -184,18 +184,18 @@
             Carga de gas y deteccion de fuga
           </li>
           <li class="list-group-item list-group-item-warning">
-            Desintalacion del equipo
+            Desintalación del equipo
           </li>
           <li class="list-group-item list-group-item-warning">
-            Montaje de equipo sobre preinstalacion
+            Montaje de equipo sobre preinstalación
           </li>
         </ul>
-        <h4 class="display-8">Electrodomesticos</h4>
+        <h4 class="display-8">Electrodomésticos</h4>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item list-group-item-dark">Visita Tecnica</li>
+          <li class="list-group-item list-group-item-dark">Visita Técnica</li>
           <li class="list-group-item list-group-item-dark">Microondas</li>
           <li class="list-group-item list-group-item-dark">Tostadoras</li>
-          <li class="list-group-item list-group-item-dark">Lamparas</li>
+          <li class="list-group-item list-group-item-dark">Lámparas</li>
           <li class="list-group-item list-group-item-dark">Licuadoras</li>
           <li class="list-group-item list-group-item-dark">
             Consultar por otro!
@@ -216,6 +216,7 @@
           </div>
           <div class="col-md-3">
             Buscanos en las redes<a
+              class="iconosfooter"
               style="color: white"
               href="https://m.facebook.com/profile.php?id=1787163212"
               ><i class="fa-brands fa-facebook"></i
