--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -73,7 +73,7 @@
           <div class="collapse navbar-collapse navbarpages" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" href="ubicacion.html">Ubicacion</a>
+                <a class="nav-link active" href="ubicacion.html">Ubicación</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="problemas.html">Problemas</a>
@@ -101,9 +101,10 @@
           <div class="row">
             <div class="col">
               <p class="lead">
-                Para conocer nuesta ubicacion precisamente les dejamos nuestra
-                ubicacion en el mapa. Nosotros nos encontramos en Parana, Entre
-                Rios y trabajamos por alrededores de la zona
+                Para saber donde estamos ubicados y las zonas en las cuales
+                trabajamos, les dejamos el mapa.<br />
+                Nos pueden encontrar en Paraná Entre Rios y trabajamos en
+                alrededores
               </p>
             </div>
           </div>
@@ -135,11 +136,12 @@
           </div>
           <div class="col-md-6 button_contacto">
             <a class="button_a" href="contacto.html">
-              <button class="text-white btn">Contactenos</button>
+              <button class="text-white btn">Contáctenos</button>
             </a>
           </div>
           <div class="col-md-3">
             Buscanos en las redes<a
+              class="iconosfooter"
               style="color: white"
               href="https://m.facebook.com/profile.php?id=1787163212"
               ><i class="fa-brands fa-facebook"></i
