arreglo error logo

--- a/index.html
+++ b/index.html
@@ -28,11 +28,7 @@
       referrerpolicy="no-referrer"
     />
     <!--logo-->
-    <link
-      rel="shortcut icon"
-      href="../images/icono-gr.ico"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="images/icono-gr.ico" type="image/x-icon" />
     <!--animaciones-->
     <link
       rel="stylesheet"
