--- a/index.html
+++ b/index.html
@@ -188,6 +188,11 @@
               href="https://www.instagram.com/ronky.gr/?hl=es-la"
               ><i class="fa-brands fa-instagram"></i
             ></a>
+            <a
+              style="color: white"
+              href="https://www.instagram.com/ronky.gr/?hl=es-la"
+              ><i class="fa-brands fa-whatsapp"></i
+            ></a>
           </div>
         </div>
       </div>
