--- a/index.html
+++ b/index.html
@@ -168,7 +168,9 @@
     <footer class="footer">
       <div class="container text-center text-white">
         <div class="row">
-          <div class="col-md-3">
+        <div class="col-md-3">
+            &copy;Creada por Valentino Roncolato
+          </div>
           <div class="col-md-6">
             <a href="pages/contacto.html">
               <button class="text-white btn">Contáctenos</button>
