--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -78,8 +78,7 @@
               <li class="nav-item">
                 <a class="nav-link active" href="problemas.html">Problemas</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="presupuesto.html">Precios</a>
+                </a>
               </li>
             </ul>
           </div>
@@ -115,7 +114,7 @@
           <div class="row">
             <div class="col">
               <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1426.0455756628348!2d-60.51801649035937!3d-31.77792863495751!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b44c4c7475386d%3A0x8943a4b824022357!2sFlorencio%20Escardo%2C%20Paran%C3%A1%2C%20Entre%20R%C3%ADos!5e0!3m2!1ses!2sar!4v1666239503841!5m2!1ses!2sar"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d108571.37476259381!2d-60.59736519935817!3d-31.74714600129031!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b44df2b9835231%3A0x554ebde0aa5cfa9a!2zUGFyYW7DoSwgRW50cmUgUsOtb3M!5e0!3m2!1ses!2sar!4v1750286756655!5m2!1ses!2sar"
                 width="100%"
                 height="450px"
                 style="border: 0"
@@ -132,7 +131,7 @@
       <div class="container text-center text-white">
         <div class="row">
           <div class="col-md-3">
-            &copy; Copyright 2022 | Creada por Valentino Roncolato
+            &copy; Creada por Valentino Roncolato
           </div>
           <div class="col-md-6 button_contacto">
             <a class="button_a" href="contacto.html">
