--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -93,6 +93,23 @@
             <div class="col">
               <h1 class="display-3">
                 <span class="span-contacto">Contáctenos</span>
+              <a/>
+                 <div class="col-md-3">
+  |           <a
+              style="color: white"
+              href="https://www.instagram.com/ronky.gr/?hl=es-la"
+              ><i class="fa-brands fa-instagram"></i
+              ></a>
+              <a
+              style="color: white"
+              href="https://www.instagram.com/ronky.gr/?hl=es-la"
+              ><i class="fa-brands fa-instagram"></i
+              ></a>
+              <a
+              style="color: white"
+              href="https://www.instagram.com/ronky.gr/?hl=es-la"
+              ><i class="fa-brands fa-instagram"></i
+              ></a>
               </h1>
             </div>
           </div>
