--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -93,23 +93,32 @@
             <div class="col">
               <h1 class="display-3">
                 <span class="span-contacto">Contáctenos</span>
-              <a/>
-                 <div class="col-md-3">
-  |           <a
+                   </h1>
+         <div class="container">
+  <div class="row">
+    <div class="col-sm">
+             <a
               style="color: white"
               href="https://www.instagram.com/ronky.gr/?hl=es-la"
               ><i class="fa-brands fa-instagram"></i
               ></a>
+    </div>
+    <div class="col-sm">
               <a
               style="color: white"
               href="https://www.instagram.com/ronky.gr/?hl=es-la"
               ><i class="fa-brands fa-instagram"></i
               ></a>
+    </div>
+    <div class="col-sm">
               <a
               style="color: white"
               href="https://www.instagram.com/ronky.gr/?hl=es-la"
               ><i class="fa-brands fa-instagram"></i
               ></a>
+    </div>
+  </div>
+</div>
               </h1>
             </div>
           </div>
