--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             ></a>
             <a
               style="color: white"
-              href="https://www.instagram.com/ronky.gr/?hl=es-la"
+              href="https://wa.me/qr/MMGVTQXV4MEYM1"
               ><i class="fa-brands fa-whatsapp"></i
             ></a>
           </div>
