--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -96,21 +96,21 @@
                    </h1>
          <div class="container">
   <div class="row">
-    <div class="col-sm">
+    <div class="col-xl">
              <a
               style="color: white"
               href="https://www.instagram.com/ronky.gr/?hl=es-la"
               ><i class="fa-brands fa-instagram"></i
               ></a>
     </div>
-    <div class="col-sm">
+    <div class="col-xl">
               <a
               style="color: white"
               href="https://www.instagram.com/ronky.gr/?hl=es-la"
               ><i class="fa-brands fa-instagram"></i
               ></a>
     </div>
-    <div class="col-sm">
+    <div class="col-xl">
               <a
               style="color: white"
               href="https://www.instagram.com/ronky.gr/?hl=es-la"
