--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -95,27 +95,27 @@
                 <span class="span-contacto">Contáctenos</span>
                    </h1>
          <div class="container">
-  <div class="row">
-    <div class="col-xl">
-             <a
+   <div class="row">
+    <div class="col">
+      <a
               style="color: white"
               href="https://www.instagram.com/ronky.gr/?hl=es-la"
               ><i class="fa-brands fa-instagram"></i
-              ></a>
+            ></a>
     </div>
-    <div class="col-xl">
-              <a
+    <div class="col">
+     <a
               style="color: white"
               href="https://www.instagram.com/ronky.gr/?hl=es-la"
               ><i class="fa-brands fa-instagram"></i
-              ></a>
+            ></a>
     </div>
-    <div class="col-xl">
-              <a
+    <div class="col">
+      <a
               style="color: white"
               href="https://www.instagram.com/ronky.gr/?hl=es-la"
               ><i class="fa-brands fa-instagram"></i
-              ></a>
+            ></a>
     </div>
   </div>
 </div>
