--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -78,9 +78,6 @@
               <li class="nav-item">
                 <a class="nav-link active" href="problemas.html">Problemas</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="presupuesto.html">Precios</a>
-              </li>
             </ul>
           </div>
         </div>
@@ -100,81 +97,28 @@
       <a
               style="color: white"
               href="https://www.instagram.com/ronky.gr/?hl=es-la"
-              ><i class="fa-brands fa-instagram"></i
-            ></a>
-    </div>
-    <div class="col">
-     <a
+              ><i class="fa-brands fa-instagram fa-2xl"></i> </a>
+              </div>
+              <div class="col">
+              <a
               style="color: white"
               href="https://www.instagram.com/ronky.gr/?hl=es-la"
-              ><i class="fa-brands fa-instagram"></i
-            ></a>
-    </div>
-    <div class="col">
-      <a
-              style="color: white"
-              href="https://www.instagram.com/ronky.gr/?hl=es-la"
-              ><i class="fa-brands fa-instagram"></i
-            ></a>
-    </div>
-  </div>
-</div>
-              </h1>
+              ><i class="fa-brands fa-instagram fa-2xl"></i></a>
             </div>
-          </div>
-        </div>
-      </article>
-      <article class="article-contacto">
-        <div class="container text-center">
-          <div class="row">
             <div class="col">
-              <form class="form-info">
-                <fieldset>
-                  <p class="text-white display-6">
-                    Complete este formulario para poder contactarnos
-                  </p>
-                  <label for="nombre">Nombre</label>
-                  <input type="text" name="nombre" id="nombre" />
-                  <br />
-                  <label for="apellido">Apellido</label>
-                  <input type="text" name="apellido" id="apellido" />
-                  <br />
-                  <label for="gmail">Correo Electrónico</label>
-                  <input type="text" name="gmail" id="gmail" />
-                  <br />
-                  <label for="numero telefonico">Número de Telefono</label>
-                  <input type="text" name="telefono" id="telefono" />
-                  <br />
-                  <label for="Electrodomesticos"
-                    >Que electrodoméstico presenta la falla?</label
-                  >
-                  <select name="Electrodomesticos" id="Electrodomesticos">
-                    <option value="Lavarropas">Lavarropas</option>
-                    <option value="Aire Acondicionado">
-                      Aire Acondicionado
-                    </option>
-                    <option value="Heladera">Heladera</option>
-                    <option value="Otros">Otros</option>
-                  </select>
-                  <br />
-                  <div>Cuentenos cual es el problema</div>
-                  <textarea name="Problema" id="Problemas" cols="25" rows="5">
-                  </textarea>
-                  <div>
-                    Acepta que le enviemos correos y mensajes para comunicarnos
-                    con usted?
-                  </div>
-                  <input type="checkbox" name="acepto" id="acepto" value="1" />
-                  <br />
-                  <input class="input-button" type="submit" value="Enviar" />
-                  <input class="input-button" type="reset" value="Borrar" />
-                </fieldset>
-              </form>
+            <a
+              style="color: white"
+              href="https://www.instagram.com/ronky.gr/?hl=es-la"
+              ><i class="fa-brands fa-instagram fa-2xl"></i></a>
+            </div>
             </div>
           </div>
         </div>
+       </div>
+       </div>
+        
       </article>
-    </section>
+            </section>
     <footer>
       <div class="container text-center text-white">
         <div class="row">
