--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -95,6 +95,22 @@
               <br>
               <br>
               <br>
+                <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+                <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+                <br>
+              <br>
+              <br>
+              <br>
               <br>
               <br>
          <div class="container">
@@ -102,8 +118,8 @@
     <div class="col">
       <a
               style="color: white"
-              href="https://www.instagram.com/ronky.gr/?hl=es-la"
-              ><i class="fa-brands fa-instagram fa-2xl"></i> </a>
+              href="https://wa.me/qr/MMGVTQXV4MEYM1"
+              ><i class="fa-brands fa-whatsapp"></i ></a>
               </div>
               <div class="col">
               <a
@@ -114,8 +130,8 @@
             <div class="col">
             <a
               style="color: white"
-              href="https://www.instagram.com/ronky.gr/?hl=es-la"
-              ><i class="fa-brands fa-instagram fa-2xl"></i></a>
+              href="https://m.facebook.com/profile.php?id=1787163212"
+              ><i class="fa-brands fa-facebook"></i></a>
             </div>
             </div>
           </div>
@@ -128,13 +144,30 @@
               <br>
               <br>
               <br>
+          <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+          <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+          <br>
+              <br>
+              <br>
+              <br>
+   
       </article>
             </section>
     <footer>
       <div class="container text-center text-white">
         <div class="row">
           <div class="col-md-3">
-            &copy; Copyright 2022 | Creada por Valentino Roncolato
+            &copy;Creada por Valentino Roncolato
           </div>
           <div class="col-md-6 button_contacto">
             <a class="button_a" href="contacto.html">
