--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -111,27 +111,25 @@
               <br>
               <br>
               <br>
-              <br>
-              <br>
          <div class="container">
    <div class="row">
     <div class="col">
       <a
               style="color: white"
               href="https://wa.me/qr/MMGVTQXV4MEYM1"
-              ><i class="fa-brands fa-whatsapp"></i ></a>
+              ><i class="fa-brands fa-whatsapp fa-10x"></i ></a>
               </div>
               <div class="col">
               <a
               style="color: white"
               href="https://www.instagram.com/ronky.gr/?hl=es-la"
-              ><i class="fa-brands fa-instagram fa-2xl"></i></a>
+              ><i class="fa-brands fa-instagram fa-10x"></i></a>
             </div>
             <div class="col">
             <a
               style="color: white"
               href="https://m.facebook.com/profile.php?id=1787163212"
-              ><i class="fa-brands fa-facebook"></i></a>
+              ><i class="fa-brands fa-facebook fa-10x"></i></a>
             </div>
             </div>
           </div>
@@ -158,9 +156,6 @@
               <br>
           <br>
               <br>
-              <br>
-              <br>
-   
       </article>
             </section>
     <footer>
