--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -145,12 +145,8 @@
               <br>
           <br>
               <br>
-              <br>
-              <br>
-              <br>
-              <br>
-          <br>
-              <br>
+
+
       </article>
             </section>
     <footer>
@@ -175,6 +171,11 @@
               style="color: white"
               href="https://www.instagram.com/ronky.gr/?hl=es-la"
               ><i class="fa-brands fa-instagram"></i
+            ></a>
+            <a
+              style="color: white"
+              href="https://wa.me/qr/MMGVTQXV4MEYM1"
+              ><i class="fa-brands fa-whatsapp"></i
             ></a>
           </div>
         </div>
