--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
           <div class="row">
             <div class="col">
               <h1 class="display-3">
-                Reparación de Lavarropas, Heladeras, Aires Acondicionados, entre
-                otros
+                Reparación de Lavarropas, Aires Acondicionados y Electrodomesticos
               </h1>
             </div>
           </div>
@@ -103,8 +102,7 @@
           <div class="row">
             <div class="col">
               <p class="lead">
-                ¿Problemas con la heladera?, ¿El lavarropas no arranca o hace
-                ruidos raros?, ¿Necesitas colocar un aire acondicionado?,
+                ¿Problemas con el laverropas?, ¿Queres comprar alguno usado?, ¿Necesitas instalas o desintalar un aire acondicionado?,
                 ¿Algunas visita Técnica? No hay problema, estás en la página
                 correcta, en GR.Reparaciones realizamos todo esto y mucho mas!!
               </p>
@@ -136,6 +134,13 @@
             <div class="carousel-item">
               <img
                 src="images/lavarropas.png"
+                class="d-block w-100"
+                alt="Lavarropas"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="images/aire1.png"
                 class="d-block w-100"
                 alt="Lavarropas"
               />
