--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="row">
             <div class="col">
               <h1 class="display-3">
-                Reparación de Lavarropas, Aires Acondicionados y Electrodomesticos
+                Reparación de Lavarropas, Aires Acondicionados, Electrodomesticos, Entre otros...
               </h1>
             </div>
           </div>
@@ -102,7 +102,7 @@
           <div class="row">
             <div class="col">
               <p class="lead">
-                ¿Problemas con el laverropas?, ¿Queres comprar alguno usado?, ¿Necesitas instalas o desintalar un aire acondicionado?,
+                ¿Problemas con el laverropas?, ¿Queres comprar alguno usado?, ¿Necesitas instalar o desintalar un aire acondicionado?,
                 ¿Algunas visita Técnica? No hay problema, estás en la página
                 correcta, en GR.Reparaciones realizamos todo esto y mucho mas!!
               </p>
