--- a/index.html
+++ b/index.html
@@ -138,6 +138,13 @@
                 alt="Lavarropas"
               />
             </div>
+            <div class="carousel-item">
+              <img
+                src="images/aire1.png"
+                class="d-block w-100"
+                alt="Lavarropas"
+              />
+            </div>
           </div>
           <button
             class="carousel-control-prev"
