--- a/pages/problemas.html
+++ b/pages/problemas.html
@@ -78,9 +78,6 @@
               <li class="nav-item">
                 <a class="nav-link active" href="problemas.html">Problemas</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="presupuesto.html">Precios</a>
-              </li>
             </ul>
           </div>
         </div>
@@ -125,43 +122,6 @@
             Cambio Fuelles
           </li>
         </ul>
-        <h4 class="display-8">Heladeras</h4>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item list-group-item-secondary">
-            Cambio Compresor
-          </li>
-          <li class="list-group-item list-group-item-secondary">
-            Cambio Plaqueta Electronicá
-          </li>
-          <li class="list-group-item list-group-item-secondary">
-            Cambio Filtro
-          </li>
-          <li class="list-group-item list-group-item-secondary">
-            Cambio Termostato
-          </li>
-          <li class="list-group-item list-group-item-secondary">
-            Cambio Bimetal y Termofusible
-          </li>
-          <li class="list-group-item list-group-item-secondary">
-            Cambio Sensores
-          </li>
-          <li class="list-group-item list-group-item-secondary">
-            Cambio Rele y Protector Térmico
-          </li>
-          <li class="list-group-item list-group-item-secondary">
-            Cambio Resistencia No Frost
-          </li>
-          <li class="list-group-item list-group-item-secondary">
-            Cambio Burletes
-          </li>
-          <li class="list-group-item list-group-item-secondary">Regulación</li>
-          <li class="list-group-item list-group-item-secondary">
-            Reparación de fugas
-          </li>
-          <li class="list-group-item list-group-item-secondary">
-            Carga Refrigerante
-          </li>
-        </ul>
         <h4 class="display-8">Aires Acondicionados</h4>
         <ul class="list-group list-group-flush">
           <li class="list-group-item list-group-item-warning">Instalación</li>
@@ -201,6 +161,8 @@
             Consultar por otro!
           </li>
         </ul>
+        <br>
+        <h1 class="display-3"> TAMBIEN VENDEMOS LAVARROPAS USADOS EN PERFECTO ESTADO! </h1>
       </article>
     </section>
     <footer>
@@ -225,6 +187,11 @@
               style="color: white"
               href="https://www.instagram.com/ronky.gr/?hl=es-la"
               ><i class="fa-brands fa-instagram"></i
+            ></a>
+             <a
+              style="color: white"
+              href="https://wa.me/qr/MMGVTQXV4MEYM1"
+              ><i class="fa-brands fa-whatsapp"></i
             ></a>
           </div>
         </div>
