--- a/index.html
+++ b/index.html
@@ -145,6 +145,13 @@
                 alt="Lavarropas"
               />
             </div>
+            <div class="carousel-item">
+              <img
+                src="images/lavarropas1.png"
+                class="d-block w-100"
+                alt="Lavarropas"
+              />
+            </div>
           </div>
           <button
             class="carousel-control-prev"
