--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
             Buscanos en las redes<a
               class="iconosfooter"
               style="color: white"
-              href="https://m.facebook.com/profile.php?id=1787163212"
-              ><i class="fa-brands fa-facebook"></i
+              href="https://m.me/gabriel.roncolato"
+              ><i class="fa-brands fa-facebook-messenger"></i>
             ></a>
             <a
               style="color: white"
