--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -122,8 +122,8 @@
             <div class="col">
             <a
               style="color: white"
-              href="https://m.facebook.com/profile.php?id=1787163212"
-              ><i class="fa-brands fa-facebook fa-10x"></i></a>
+              href="https://m.me/gabriel.roncolato"
+              ></a><i class="fa-brands fa-facebook-messenger fa-10x"></i></a>
             </div>
             </div>
           </div>
@@ -161,9 +161,8 @@
             Buscanos en las redes<a
               class="iconosfooter"
               style="color: white"
-              href="https://m.facebook.com/profile.php?id=1787163212"
-              ><i class="fa-brands fa-facebook"></i
-            ></a>
+              href="https://m.me/gabriel.roncolato"
+              ><i class="fa-brands fa-facebook-messenger"></i></a>
             <a
               style="color: white"
               href="https://www.instagram.com/ronky.gr/?hl=es-la"
