--- a/pages/problemas.html
+++ b/pages/problemas.html
@@ -169,7 +169,7 @@
       <div class="container text-center text-white">
         <div class="row">
           <div class="col-md-3">
-            &copy; Copyright 2022 | Creada por Valentino Roncolato
+            &copy; Creada por Valentino Roncolato
           </div>
           <div class="col-md-6 button_contacto">
             <a class="button_a" href="contacto.html">
@@ -180,9 +180,8 @@
             Buscanos en las redes<a
               class="iconosfooter"
               style="color: white"
-              href="https://m.facebook.com/profile.php?id=1787163212"
-              ><i class="fa-brands fa-facebook"></i
-            ></a>
+              href="https://m.me/gabriel.roncolato"
+              ><i class="fa-brands fa-facebook-messenger"></i></a>
             <a
               style="color: white"
               href="https://www.instagram.com/ronky.gr/?hl=es-la"
