--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -142,14 +142,13 @@
             Buscanos en las redes<a
               class="iconosfooter"
               style="color: white"
-              href="https://m.facebook.com/profile.php?id=1787163212"
+              href="https://m.me/gabriel.roncolato"
               ><i class="fa-brands fa-facebook"></i
             ></a>
             <a
               style="color: white"
               href="https://www.instagram.com/ronky.gr/?hl=es-la"
-              ><i class="fa-brands fa-instagram"></i
-            ></a>
+              ><i class="fa-brands fa-facebook-messenger"></i></a>
             <a
               style="color: white"
               href="https://wa.me/qr/MMGVTQXV4MEYM1"
