--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -143,8 +143,8 @@
               class="iconosfooter"
               style="color: white"
               href="https://m.me/gabriel.roncolato"
-              ><i class="fa-brands fa-facebook"></i
-            ></a>
+              ><i class="fa-brands fa-facebook-messenger"></i
+              ></a>
             <a
               style="color: white"
               href="https://www.instagram.com/ronky.gr/?hl=es-la"
@@ -152,8 +152,7 @@
             <a
               style="color: white"
               href="https://wa.me/qr/MMGVTQXV4MEYM1"
-              ><i class="fa-brands fa-whatsapp"></i
-            ></a>
+              ><i class="fa-brands fa-instagram"></i></a>
           </div>
         </div>
       </div>
