--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -148,11 +148,13 @@
             <a
               style="color: white"
               href="https://www.instagram.com/ronky.gr/?hl=es-la"
-              ><i class="fa-brands fa-facebook-messenger"></i></a>
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
             <a
               style="color: white"
               href="https://wa.me/qr/MMGVTQXV4MEYM1"
-              ><i class="fa-brands fa-instagram"></i></a>
+              ><i class="fa-brands fa-whatsapp"></i
+            ></a>
           </div>
         </div>
       </div>
