--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -123,7 +123,7 @@
             <a
               style="color: white"
               href="https://m.me/gabriel.roncolato"
-              ></a><i class="fa-brands fa-facebook-messenger fa-10x"></i></a>
+              ><i class="fa-brands fa-facebook-messenger fa-10x"></i></a>
             </div>
             </div>
           </div>
