--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </div>
             <div class="carousel-item">
               <img
-                src="images/lavarropas1.png"
+                src="images/2_lavarropas.png"
                 class="d-block w-100"
                 alt="Lavarropas"
               />
