--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@
               <img
                 src="images/aire1.png"
                 class="d-block w-100"
-                alt="Lavarropas"
+                alt="Aire Acondicionado"
               />
             </div>
             <div class="carousel-item">
               <img
-                src="images/2_lavarropas.png"
+                src="images/lava.png"
                 class="d-block w-100"
                 alt="Lavarropas"
               />
