--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             </a>
             <a
               style="color: white"
-              href="https://www.instagram.com/ronky.gr/?hl=es-la"
+              href="https://www.instagram.com/servicio_tecnico_ronky.gr?igsh=bjN5NHhxajNpNHpi"
               ><i class="fa-brands fa-instagram"></i
             ></a>
             <a
