--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -116,7 +116,7 @@
               <div class="col">
               <a
               style="color: white"
-              href="https://www.instagram.com/ronky.gr/?hl=es-la"
+              href="https://www.instagram.com/servicio_tecnico_ronky.gr?igsh=bjN5NHhxajNpNHpi"
               ><i class="fa-brands fa-instagram fa-10x"></i></a>
             </div>
             <div class="col">
@@ -165,7 +165,7 @@
               ><i class="fa-brands fa-facebook-messenger"></i></a>
             <a
               style="color: white"
-              href="https://www.instagram.com/ronky.gr/?hl=es-la"
+              href="https://www.instagram.com/servicio_tecnico_ronky.gr?igsh=bjN5NHhxajNpNHpi"
               ><i class="fa-brands fa-instagram"></i
             ></a>
             <a
