--- a/pages/problemas.html
+++ b/pages/problemas.html
@@ -184,7 +184,7 @@
               ><i class="fa-brands fa-facebook-messenger"></i></a>
             <a
               style="color: white"
-              href="https://www.instagram.com/ronky.gr/?hl=es-la"
+              href="https://www.instagram.com/servicio_tecnico_ronky.gr?igsh=bjN5NHhxajNpNHpi"
               ><i class="fa-brands fa-instagram"></i
             ></a>
              <a
