--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -147,7 +147,7 @@
               ></a>
             <a
               style="color: white"
-              href="https://www.instagram.com/ronky.gr/?hl=es-la"
+              href="https://www.instagram.com/servicio_tecnico_ronky.gr?igsh=bjN5NHhxajNpNHpi"
               ><i class="fa-brands fa-instagram"></i
             ></a>
             <a
